--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ click = "^7.0"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.scripts]
+python-project = "python_project.console:main"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
