--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = ["Paulo S. Costa"]
 [tool.poetry.dependencies]
 python = "^3.8"
 click = "^7.0"
+requests = "^2.22.0"
 
 [tool.poetry.dev-dependencies]
 
