--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ click = "^7.0"
 requests = "^2.22.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.3.5"
 
 [tool.poetry.scripts]
 python-project = "python_project.console:main"
