--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pytest = "^5.3.5"
 coverage = {extras = ["toml"], version = "^5.0.3"}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
+ipykernel = "^5.1.4"
+
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
 
