--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ coverage = {extras = ["toml"], version = "^5.0.3"}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
 ipykernel = "^5.1.4"
+isort = "^4.3.21"
+flake8 = "^3.7.9"
+flake8-black = "^0.1.1"
+flake8-isort = "^2.8.0"
+toml = "^0.10.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
