--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ flake8-black = "^0.1.1"
 flake8-isort = "^2.8.0"
 toml = "^0.10.0"
 flake8-bugbear = "^20.1.4"
+flake8-bandit = "^2.1.2"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
