--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ flake8-isort = "^2.8.0"
 toml = "^0.10.0"
 flake8-bugbear = "^20.1.4"
 flake8-bandit = "^2.1.2"
+black = "^19.10b0"
+safety = "^1.8.5"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
