--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ flake8-bugbear = "^20.1.4"
 flake8-bandit = "^2.1.2"
 black = "^19.10b0"
 safety = "^1.8.5"
+mypy = "^0.761"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
