--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ authors = ["Paulo S. Costa"]
 python = "^3.7"
 click = "^7.0"
 requests = "^2.22.0"
+desert = "^2020.1.6"
+marshmallow = "^3.4.0"
 
 [tool.poetry.scripts]
 python-project = "python_project.console:main"
