--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ safety = "^1.8.5"
 mypy = "^0.761"
 # TODO: Update pytype
 pytype = {version = "^2020.2.6", python = "3.7"}
+typeguard = "^2.7.1"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
