--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ mypy = "^0.761"
 # TODO: Update pytype
 pytype = {version = "^2020.2.6", python = "3.7"}
 typeguard = "^2.7.1"
+flake8-annotations = "^2.0.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
