--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ pytype = {version = "^2020.2.6", python = "3.7"}
 typeguard = "^2.7.1"
 flake8-isort = "^2.8.0"
 flake8-annotations = "^2.0.0"
+flake8-docstrings = "^1.5.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
