--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ typeguard = "^2.7.1"
 flake8-isort = "^2.8.0"
 flake8-annotations = "^2.0.0"
 flake8-docstrings = "^1.5.0"
+darglint = "^1.1.3"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
