--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ flake8-isort = "^2.8.0"
 flake8-annotations = "^2.0.0"
 flake8-docstrings = "^1.5.0"
 darglint = "^1.1.3"
+xdoctest = "^0.11.0"
+pygments = "^2.5.2"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
