--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ flake8-docstrings = "^1.5.0"
 darglint = "^1.1.3"
 xdoctest = "^0.11.0"
 pygments = "^2.5.2"
+sphinx = "^2.4.1"
+doc8 = "^0.8.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
