--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ xdoctest = "^0.11.0"
 pygments = "^2.5.2"
 sphinx = "^2.4.1"
 doc8 = "^0.8.0"
+sphinx-autodoc-typehints = "^1.10.3"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
