--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,8 @@ coverage = {extras = ["toml"], version = "^5.0.3"}
 pytest-cov = "^2.8.1"
 pytest-mock = "^2.0.0"
 ipykernel = "^5.1.4"
-isort = "^4.3.21"
 flake8 = "^3.7.9"
 flake8-black = "^0.1.1"
-toml = "^0.10.0"
 flake8-bugbear = "^20.1.4"
 flake8-bandit = "^2.1.2"
 black = "^19.10b0"
@@ -46,6 +44,7 @@ pygments = "^2.5.2"
 sphinx = "^2.4.1"
 doc8 = "^0.8.0"
 sphinx-autodoc-typehints = "^1.10.3"
+isort = {extras = ["pyproject"], version = "^4.3.21"}
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
