--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ pygments = "^2.5.2"
 sphinx = "^2.4.1"
 doc8 = "^0.8.0"
 sphinx-autodoc-typehints = "^1.10.3"
-isort = {extras = ["pyproject"], version = "^4.3.21"}
+isort = "^4.3.21"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
@@ -56,13 +56,6 @@ source = ["python_project"]
 [tool.coverage.report]
 show_missing = true
 fail_under = 80
-
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
 
 [build-system]
 requires = ["poetry>=0.12"]
