--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-project"
-version = "0.1.0"
+version = "0.2"
 description = "A Python project template"
 license = "MIT"
 readme = "README.md"
@@ -15,6 +15,7 @@ click = "^7.0"
 requests = "^2.22.0"
 desert = "^2020.1.6"
 marshmallow = "^3.4.0"
+importlib_metadata = {version = "^1.5.0", python = "<3.8"}
 
 [tool.poetry.scripts]
 python-project = "python_project.console:main"
