--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ doc8 = "^0.8.0"
 sphinx-autodoc-typehints = "^1.10.3"
 isort = "^4.3.21"
 codecov = "^2.0.15"
+flake8-rst-docstrings = "^0.0.13"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
