--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ sphinx-autodoc-typehints = "^1.10.3"
 isort = "^4.3.21"
 codecov = "^2.0.15"
 flake8-rst-docstrings = "^0.0.13"
+pandas-vet = "^0.2.2"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
