--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ isort = "^4.3.21"
 codecov = "^2.0.15"
 flake8-rst-docstrings = "^0.0.13"
 pandas-vet = "^0.2.2"
+rope = "^0.16.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
