--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,41 @@
 # TODO: Add more pre-commit rules, like prettier
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: local
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/prettier/prettier
+    rev: 1.19.1
     hooks:
-    -   id: black
+      - id: prettier
+        args: [--prose-wrap=always, --print-width=88]
+  - repo: local
+    hooks:
+      - id: flake8
+        name: flake8
+        entry: poetry run flake8
+        language: system
+        types: [python]
+      - id: mypy
+        name: mypy
+        entry: poetry run mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
+        language: system
+        types: [python]
+      - id: doc8
+        name: doc8
+        entry: poetry run doc8
+        language: system
+        types: [python]
+      - id: black
         name: black
         entry: poetry run black
         language: system
         types: [python]
-    -   id: flake8
-        name: flake8
-        entry: poetry run flake8
+      - id: isort
+        name: isort
+        entry: poetry run isort
         language: system
         types: [python]
