--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,8 @@
 [mypy]
 
+disallow_untyped_defs = True
+check_untyped_defs = True
+no_implicit_optional = True
+
 [mypy-desert,marshmallow,nox.*,pytest,pytest_mock,_pytest.*]
 ignore_missing_imports = True
