--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,19 @@
 [mypy]
 
+disallow_untyped_calls = True
+strict_optional = True
+warn_no_return = True
+warn_redundant_casts = True
+disallow_any_generics = True
+
 disallow_untyped_defs = True
 check_untyped_defs = True
 no_implicit_optional = True
+
+# Stricter rules, uncomment at your own discression
+# warn_return_any = True
+# warn_unused_ignores = True
+
 
 [mypy-desert,marshmallow,nox.*,pytest,pytest_mock,_pytest.*]
 ignore_missing_imports = True
